# magic-ai-filters

./: .env.example  .gitignore  ALFA_INTEGRATION.md  AUDYTSTRONY_INTEGRATION.md  FINAL_INTEGRATION.md  LANGGRAPH_INTEGRATION.md  RC2_SPEC.md  README.md  SETUP.md  alfa_index_document.py  alfa_pageindex_bridge.py  alfa_rc2_build_all.ps1  alfa_rc2_query.py  alfa_rc2_run_document.py  alfa_rc2_smoke_test.py  alfa_rc2_test1.md  alfa_section_map_validate.py  docker-compose.qdrant.yml  index.html  package.json  pyproject.toml  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
docs/: architecture.md  briefcase-builder.md  no-code-builder-runtime.md  routing.md  safety-model.md  threat-model.md
pageindex/: page_index.py
public/: llms.txt
results/: PRML_alfa_section_map.json  PRML_query_20260510_143243_praktyki_komunikacyjne_wprowadzenie.json  PRML_query_20260510_153114_what_are_the_main_topics_and_key_findings.json  PRML_query_20260510_154330_what_are_the_main_topics_and_key_findings.json  RC2_SMOKE_REPORT.json  README_query_20260508_035558_pageindex_core_features_and_deployment_options.json  README_query_20260508_040255_pageindex_core_features_and_deployment_options.json  README_query_20260508_040732_pageindex_core_features_and_deployment_options.json  README_query_rejected.json  README_query_result.json  README_structure.json  alfa_rc2_test1_alfa_section_map.json  alfa_rc2_test1_query_20260508_043453_jakie_s_g_wne_tezy_i_rekomendacje_dokumentu.json  alfa_rc2_test1_query_20260508_044232_jakie_s_g_wne_tezy_i_rekomendacje_dokumentu.json  tmp_invalid_rc21.json  (+15 more)
(+301 files in other folders)
